# trip-notifier

./: .gitignore  makefile  pyproject.toml
scripts/: reset_database.py
src/: app.py  settings.py
src/api/account/: post_account.py  schemas.py
src/database/: __init__.py  account.py  database.py
src/services/: account_service.py
src/utils/: populate_database.py  setup_database.py  show_database.py
test/: conftest.py  helpers.py
test/api/: test_post_account.py
