[tool.poetry]
name = "trip-notifier"
version = "0.1.0"
description = ""
authors = ["krenbergs <kasper.renhornberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
pydantic-settings = "^2.6.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
pytest = "^8.3.4"
pytest-env = "^1.1.5"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
