[tool.poetry]
name = "trip-notifier"
version = "0.1.0"
description = ""
authors = ["krenbergs <kasper.renhornberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic-settings = "^2.6.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
pytest = "^8.3.4"
pytest-env = "^1.1.5"
pydantic = "^2.10.3"
google-api-python-client = "^2.154.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
